@@ -1,5 +1,11 @@
 2015-11-23  Natalia Portillo  <claunia@claunia.com>
 
+	* Enums.cs:
+	* Device/ScsiCommands.cs:
+	  Implemented SCSI READ DISC INFORMATION.
+
+2015-11-23  Natalia Portillo  <claunia@claunia.com>
+
 	* Device/ScsiCommands.cs:
 	  Implemented SCSI READ CAPACITY(16).
 
